scss/index.scss
/* ... */
section.intro{
    width: 100%;
    min-height: 70vh;
    // background-color: red;

    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: center;
    gap: max(5vh, 40px);
    // padding: max(10vh, 70px) max(10vw, 70px);

    .upper-intro{
        width: 60%;
        display: flex;
        flex-flow: row nowrap;
        justify-content: center;
        gap: max(3vw, 30px);
        font-size: 5rem;

        .player{
            scale: 0;
            font-size: inherit;
            transition-duration: 200ms;
        }

        .vs{
            scale: 0;
            font-size: inherit;
        }

        .appear{
            scale: 1;
            animation: appear 0.2s ease-in-out;
        }

        .reverse-appear{
            animation: revese-appear 0.2s ease-in-out;
        }
    }

    .lower-intro{
        .countdown{
            font-size: 10rem;
            scale: 0;
            color: $positive-clr;
        }

        .appear{
            scale: 1;
            animation: appear 0.2s ease-in-out;
        }

        .reverse-appear{
            animation: reverse-appear 0.2s ease-in-out;
        }
    }
    
}

@keyframes appear {
    from {
        scale: 0;
    }
    to {
        scale: 1;
    }
}

@keyframes reverse-appear {
    from {
        scale: 1;
    }
    to {
        scale: 0;
    }
}

@keyframes fadeOut {
    from {
        opacity: 1;
    }
    to {
        opacity: 0;
    }
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

@keyframes loadHealth {
    from {
        width: 0%;
    }
    to {
        width: 100%;
    }
}

section.fadeOut{
    animation: fadeOut 1s ease-in-out;
    animation-iteration-count: 1;
}

section.hidden{
   display: none; 
}

section.fadeOut{
    animation: fadeOut 0.5s ease-in-out;
}

footer{
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
    align-items: center;
    gap: max(0.5vw, 5px);
    margin-top: auto;
    font-family: "Inter", sans-serif;
    overflow: hidden;

    svg{
        transition-duration: 500ms;
    }

    svg:hover{
        transform: rotate(360deg);
    }
}

.tint{
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 9;
    background-color: rgba(41, 41, 41, 0.726);
    display: none;
    justify-content: center;
    align-items: flex-start;
    font-family: "Inter", sans-serif;

    animation: fadeIn 0.5s ease-in-out;

    @keyframes modal-appear {
        from{
            transform: translate(0, 10px);
            opacity: 0;
        }

        to{
            transform: translate(0, 0);
            opacity: 1;
        }
    }
    .modal{
        margin-top: max(20vh, 150px);
        width: max(30vw, 300px);
        height: max(20vh, 150px);
        background-color: white;
        border-radius: 10px;
        font-family: inherit;

        animation: modal-appear 0.5s ease-in-out;

        display: flex;
        flex-flow: column;
        justify-content: center;
        align-items: center;
        gap: max(2vh, 20px);
    }

    div{
        display: flex;
        flex-flow: column;
        align-items: center;
    }

    .winner{
        // font-family: "Inter", sans-serif;
        font-size: 2rem;
        font-weight: 700;
        // text-shadow: 2px 2px 2px rgba(13, 117, 36, 0.442);
    }

    .won-text{
        color: rgb(9, 207, 52);
        font-weight: 700;
        font-family: "Inter", sans-serif;
        font-size: 1rem;
    }

    .draw{
        color: rgb(146, 143, 143);
    }

    button{
        background-color: transparent;
        border: none;
        font-size: 1.5rem;
        
    }

    button:hover{
        cursor: pointer;
        color: $positive-clr;
    }
}

.tint-fadeOut{
    animation: fadeOut 0.5s ease-in-out;
}

@media screen and (max-width: 1200px) {

    section.menu{

        h1{
            font-size: 3rem;
        }

        div.card .name input{
            font-size: 3rem;
        }

        div.main{
            width: 100%;
            grid-template-columns: 1fr;

            div.card{
                width: max(40%, 300px);
            }
        }

        div.vs{
            font-size: 3rem;
        }
    }
}
@media screen and (max-width: 900px) {
    section.intro {
        .upper-intro{
            flex-flow: column;
            align-items: center;
            font-size: 3rem;
        }

        .lower-intro{
            .countdown{
                font-size: 4rem;
            }
        }
    }

    section.game{
        div.gameboard{
            button.cell{
                font-size: 4rem;
            }
        }
    }
}
/* ... */

